# eigen

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONFIG.md  GEMINI.md  README.md  SYNCTHING_HEALTH_CHECK_REVIEW.md  eslint.config.mjs  index.html  next-env.d.ts  next.config.mjs  package.json  pnpm-lock.yaml  repomix-output.xml  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.agent-tracker/: CURRENT_CONTEXT.md  project-status.json
.github/: copilot-instructions.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: architecture.md  error-handling.md  s3-backend-design.md  s3-minio-testing.md  s3-phase1-testing.md  s3-phase2-testing.md  syncthing-hooks.md
scripts/: check.ps1  check.sh  download-syncthing.js
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  devices.rs  events.rs  files.rs  folders.rs  mod.rs  pending.rs  s3.rs  system.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: add-device-dialog.tsx  add-folder-dialog.tsx  ai-search-bar.tsx  command-menu.tsx  configure-s3-dialog.tsx  conflict-resolver.tsx  conflicts-panel.tsx  debug-panel.tsx  device-list.tsx  edit-device-dialog.tsx  error-boundary.tsx  file-browser.tsx  file-indexer.tsx  focus-mode.tsx  folder-list.tsx  header.tsx  ignore-patterns-dialog.tsx  log-viewer.tsx  logs-page.tsx  main-content.tsx  mobile-nav.tsx  network-graph-live.tsx  network-graph.tsx  pending-requests-banner.tsx  pending-requests-dialog.tsx  providers.tsx  quick-look.tsx  s3-page.tsx  (+11 more)
(+127 files in other folders)
